# shadowsocks-libuv

./: .gitignore  CMakeLists.txt
.agents/skills/shadowsocks-libuv/agents/: openai.yaml
.claude/: ecc-tools.json  identity.json
.claude/homunculus/instincts/inherited/: shadowsocks-libuv-instincts.yaml
.claude/skills/shadowsocks-libuv/: SKILL.md
.codex/: AGENTS.md
.github/workflows/: cmake-multi-platforms.yml  msvc.yml
src/: client.c  crypt.c  handshake.c  remote.c  server.c  server.h  shadow.c  shadow.h  utils.c
